Extra set updated

--- a/Day3_strings.ipynb
+++ b/Day3_strings.ipynb
@@ -523,10 +523,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "e492a31f-f353-4d68-bd43-c0c3925a4488",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter String :  aabbss\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 2\n",
+      "b 2\n",
+      "s 2\n"
+     ]
+    }
+   ],
    "source": [
     "string=input(\"Enter String : \")\n",
     "unique=\"\"\n",
@@ -539,9 +556,17 @@
     "        large=string.count(i)\n",
     "for i in unique:\n",
     "    if string.count(i)==large:\n",
-    "        prin\n",
+    "        print(i,large)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d92bbb2-c112-4304-a3bb-22223a7f9d60",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
