--- a/Extra_set.ipynb
+++ b/Extra_set.ipynb
@@ -128,6 +128,218 @@
     "print(sumnum)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3edaa071-65cf-4271-bf08-a0b2f07d6373",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Number :  153\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "153  is Armstrong\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=int(input(\"Enter Number : \"))\n",
+    "temp=num\n",
+    "count=0\n",
+    "while num > 0:\n",
+    "    count+=1\n",
+    "    num//=10\n",
+    "num=temp\n",
+    "sumnum=0\n",
+    "while num>0:\n",
+    "    digit=num%10\n",
+    "    sumnum+=(digit**count)\n",
+    "    num//=10\n",
+    "if temp == sumnum:\n",
+    "    print(temp,\" is Armstrong\")\n",
+    "else:\n",
+    "    print(temp,\" is not Armstrong\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "555e1b75-781b-4202-8ca6-0a424b87789f",
+   "metadata": {},
+   "source": [
+    "Second largest element without Sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9a58160e-b8cb-4e1b-96ad-53302f93d301",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1=[10,8,34,50]\n",
+    "second=0\n",
+    "first=0\n",
+    "for i in l1:\n",
+    "    if i>first :\n",
+    "        second=first\n",
+    "        first=i\n",
+    "    elif i<first and i>second:\n",
+    "        second=i\n",
+    "print(second)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d62eaebd-b84e-4d59-8286-95aa55d12d98",
+   "metadata": {},
+   "source": [
+    "GCD of two numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6344ca12-e372-4141-afef-d15956312dad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter number1 :  42\n",
+      "Enter number2 :  33\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GCD =  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1=int(input(\"Enter number1 : \"))\n",
+    "num2=int(input(\"Enter number2 : \"))\n",
+    "maxval=max(num1,num2)\n",
+    "minval=min(num1,num2)\n",
+    "while maxval != 0:\n",
+    "    minval,maxval = maxval,minval % maxval\n",
+    "print(\"GCD = \",minval)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33f783a7-ce7a-485b-8a51-a3a5482b9cf4",
+   "metadata": {},
+   "source": [
+    "Strong Number "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9e9b7275-00d6-4044-8412-a80dad2d63f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Number :  40585\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Strong\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=int(input(\"Enter Number : \"))\n",
+    "temp = num\n",
+    "sumval=0\n",
+    "while num>0:\n",
+    "    digit=num%10\n",
+    "    fact=1\n",
+    "    for i in range(1,digit+1):\n",
+    "        fact*=i\n",
+    "    sumval+=fact\n",
+    "    num//=10\n",
+    "if temp == sumval:\n",
+    "    print(\"Strong\")\n",
+    "else:\n",
+    "    print(\"Not Strong\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0385f656-c7d9-46e3-ad63-dfd8309e54c0",
+   "metadata": {},
+   "source": [
+    "Perfect Number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "08fd6106-2025-4231-8f16-cdb9a8299f0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Number :  8128\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perfect\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=int(input(\"Enter Number : \"))\n",
+    "sumval=0\n",
+    "for i in range(1,num):\n",
+    "    if num%i==0:\n",
+    "        sumval+=i\n",
+    "if num == sumval:\n",
+    "    print(\"Perfect\")\n",
+    "else:\n",
+    "    print(\"Not Perfect\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21575964-04a1-45a1-96b7-4a0f9daa32e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
