Spelling mistake Corrected

--- a/Day3_strings.ipynb
+++ b/Day3_strings.ipynb
@@ -279,7 +279,7 @@
    "id": "72c79a01-33e7-4cb6-bd5c-72e9342c4b30",
    "metadata": {},
    "source": [
-    "Firt non Repeting Character"
+    "First non Repeting Character"
    ]
   },
   {
