New challenging Recursion programs solved

--- a/Day4_functions.ipynb
+++ b/Day4_functions.ipynb
@@ -438,7 +438,7 @@
    "id": "ca773d37-4467-4eb1-8ccc-209c2fb416be",
    "metadata": {},
    "source": [
-    "#String Palindrome using Recursion"
+    "String Palindrome using Recursion"
    ]
   },
   {
@@ -959,12 +959,128 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dee2170e-921f-48ec-9f07-30cde9ba8e0c",
+   "cell_type": "markdown",
+   "id": "2b4343d9-32fe-456d-901f-ad1c54fc5df1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Recursion Challege Questions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0fbdfe8-ee66-449f-977e-a563c86af90c",
+   "metadata": {},
+   "source": [
+    "count 0 in given number using recursion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d0fbed77-4e49-45f9-9268-2ae53d41633f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Number :  1200230280280238223902\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_zero(num,c=0):\n",
+    "    if num==0:\n",
+    "        return c\n",
+    "    return count_zero(num//10,c+1) if num%10==0 else count_zero(num//10,c)\n",
+    "num=int(input(\"Enter Number : \"))\n",
+    "print(count_zero(num))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7001a87-7140-49ad-837d-7cdf897cdeab",
+   "metadata": {},
+   "source": [
+    "check number is Prime using recursion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1336dbec-2707-4525-ace4-868f852d69bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the number :  7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prime\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_prime(num,i=2):\n",
+    "    if i==num:\n",
+    "        return print(\"Prime\")\n",
+    "    return print(\"not Prime\") if num%i == 0 else check_prime(num,i+1)\n",
+    "\n",
+    "num=int(input(\"Enter the number : \"))\n",
+    "check_prime(num)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "caae1a23-46ff-4e46-a317-0d35cbb2d3ef",
+   "metadata": {},
+   "source": [
+    "Reverse the number without extra variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e4a2ae9b-f5d1-437b-8615-3333e5ff9695",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Number :  623762\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "267326\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse_num(num):\n",
+    "    if num<10:\n",
+    "        return num\n",
+    "    return int(str(num%10)+str(reverse_num((num//10))))\n",
+    "num=int(input(\"Enter Number : \"))\n",
+    "print(reverse_num(num))"
+   ]
   }
  ],
  "metadata": {
