--- a/Day5_Competitive_programs.ipynb
+++ b/Day5_Competitive_programs.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "id": "f5a7d7c7-ed8a-417b-8cb4-f15d5b868326",
    "metadata": {},
    "outputs": [
@@ -68,14 +68,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30\n"
+      "-20\n"
      ]
     }
    ],
    "source": [
-    "l1=[10,20,30,28,98]\n",
-    "first=0\n",
-    "second=0\n",
+    "l1=[-10,-20,-30,-28,-98]\n",
+    "first=second=float('-inf')\n",
     "for i in l1:\n",
     "    if i>first and i > second:\n",
     "        second=first\n",
@@ -111,7 +110,7 @@
    ],
    "source": [
     "l1=[12,3,12,3,53,56,3,5,6,5,6,7]\n",
-    "unique={}\n",
+    "unique=[]\n",
     "for i in l1:\n",
     "    if i not in unique:\n",
     "        unique[i]=l1.count(i)\n",
@@ -136,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "id": "c8087f6b-5cbd-442d-b7b2-92eaf092fbf6",
    "metadata": {},
    "outputs": [
@@ -144,18 +143,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10, 2, 4, 5, 6, 0, 0, 0, 0, 0]\n"
+      "[22, 4, 6, 4, 0, 0, 0]\n"
      ]
     }
    ],
    "source": [
-    "l1=[0,10,0,2,0,4,5,0,6,0]\n",
-    "\n",
-    "for i in range(0,l1.count(0)):\n",
-    "    for i in l1:\n",
-    "        if i == 0:\n",
-    "            l1.append(i)\n",
-    "            l1.remove(i)\n",
+    "l1=[0,22,4,0,6,4,0]\n",
+    "pos=0\n",
+    "for i in range(len(l1)):\n",
+    "    if l1[i]!=0:\n",
+    "        l1[pos],l1[i]=l1[i],l1[pos]\n",
+    "        pos+=1\n",
     "print(l1)"
    ]
   },
@@ -169,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "id": "fab55bc8-2fc2-4982-826a-bf4a828ff0c7",
    "metadata": {},
    "outputs": [
@@ -183,7 +181,7 @@
    ],
    "source": [
     "l1=[1,2,3,5]\n",
-    "for i in range(1,len(l1)+1):\n",
+    "for i in range(1,len(l1)+2):\n",
     "    if i not in l1:\n",
     "        print(i)\n",
     "    "
@@ -207,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
    "id": "3cd0d8ba-2e55-45be-99c0-4eb2e2beda9b",
    "metadata": {},
    "outputs": [
@@ -220,13 +218,17 @@
     }
    ],
    "source": [
-    "l1=[10,20,30,10,40]\n",
-    "unique=[]\n",
-    "for i in l1:\n",
-    "    if l1.count(i)>1 and i not in unique:\n",
-    "        unique.append(i)\n",
-    "for i in unique:\n",
-    "    print(i)"
+    "def find_duplicate(arr):\n",
+    "    seen = set()\n",
+    "\n",
+    "    for num in arr:\n",
+    "        if num in seen:\n",
+    "            return num\n",
+    "        seen.add(num)\n",
+    "l1=[10,30,23,43,53,10]\n",
+    "print(find_duplicate(l1))\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -262,7 +264,7 @@
    "source": [
     "s1=input(\"Enter string 1 : \")\n",
     "s2=input(\"Enter string 2 : \")\n",
-    "if s2 in (s1+s1):\n",
+    "if len(s1)== len(s2) and s2 in (s1+s1):\n",
     "    print(\"s2 is Rotation of s1\")\n",
     "else:\n",
     "    print(\"s2 is not Rotation of s1\")"
