--- a/Day5_Competitive_programs.ipynb
+++ b/Day5_Competitive_programs.ipynb
@@ -227,7 +227,6 @@
     "        seen.add(num)\n",
     "l1=[10,30,23,43,53,10]\n",
     "print(find_duplicate(l1))\n",
-    "\n",
     "    "
    ]
   },
@@ -271,9 +270,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bec08f50-46de-4c54-9978-815689e60a8a",
+   "metadata": {},
+   "source": [
+    "###Find duplicate if arr size 1 to n (use floyd method)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "de74bef7-a7e9-4768-873e-69fdf1c80bef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_duplicate(num):\n",
+    "    first=num[0]\n",
+    "    next_val=num[0]\n",
+    "    \n",
+    "    while True:\n",
+    "        first=num[first]\n",
+    "        next_val=num[num[first]]\n",
+    "        if first==next_val:\n",
+    "            break\n",
+    "    first=num[0]\n",
+    "\n",
+    "    while first != next_val:\n",
+    "        first=num[first]\n",
+    "        next_val=num[next_val]\n",
+    "\n",
+    "    return first\n",
+    "\n",
+    "l1=[1,3,4,2,4]\n",
+    "print(find_duplicate(l1))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "610214b5-2681-4402-a4de-83fd76953f55",
+   "id": "c4ea8248-c3c1-4b9f-8b38-1ffe2c50039d",
    "metadata": {},
    "outputs": [],
    "source": []
