Day 5 new codes added

--- a/Day5_Competitive_programs.ipynb
+++ b/Day5_Competitive_programs.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "de74bef7-a7e9-4768-873e-69fdf1c80bef",
    "metadata": {},
    "outputs": [
@@ -314,9 +314,167 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9c1f2fd5-a4e5-404b-a106-928097075af0",
+   "metadata": {},
+   "source": [
+    "##Kadane's Algorithm\n",
+    "find maximum sum subarray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1aef31f7-7945-4fff-83f3-5cedcbe0aceb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum_of_subarray(arr):\n",
+    "    current_sum=0\n",
+    "    max_sum=float('-inf')\n",
+    "    for i in arr:\n",
+    "        current_sum+=i\n",
+    "        max_sum=max(max_sum,current_sum)\n",
+    "        if current_sum < 0 :\n",
+    "            current_sum=0\n",
+    "        else:\n",
+    "            print(\"Sub Array = \",i,end=\" \")\n",
+    "    return max_sum\n",
+    "l1=[-5,-1,-8]\n",
+    "print(sum_of_subarray(l1))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98611f6d-8ffc-4dec-84f5-5806f46314bf",
+   "metadata": {},
+   "source": [
+    "###check array sorted without sorted()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "15ed9925-8996-400d-ad84-eaf81b6ecbee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def check_array(arr):\n",
+    "    flag=True\n",
+    "    for i in range(len(arr)-1):\n",
+    "        if arr[i]>arr[i+1]:\n",
+    "            flag = False\n",
+    "            return flag\n",
+    "            break\n",
+    "    if flag==True:\n",
+    "        return flag\n",
+    "\n",
+    "arr=[10,20,30,60,50]\n",
+    "check_array(arr)\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06744b9e-38f0-4d9d-8ac1-80a00ef8164a",
+   "metadata": {},
+   "source": [
+    "###First non repeating Character "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "ed06a359-121c-489d-a5bb-e7fc25c445e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter String :  programming\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\n"
+     ]
+    }
+   ],
+   "source": [
+    "def non_repeat_char(s):\n",
+    "    freq = {}\n",
+    "\n",
+    "    for ch in s:\n",
+    "        freq[ch] = freq.get(ch, 0) + 1\n",
+    "\n",
+    "    for ch in s:\n",
+    "        if freq[ch] == 1:\n",
+    "            return ch\n",
+    "    return None\n",
+    "string=input(\"Enter String : \")\n",
+    "print(non_repeat_char(string))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc540804-436b-4e25-91f7-a85152e2d448",
+   "metadata": {},
+   "source": [
+    "###Rorate Right for K positions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "2007806a-88fd-4e33-9089-a980694832fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 2, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def rotate_right(arr, k):\n",
+    "    n = len(arr)\n",
+    "    k = k % n   # important when k > n\n",
+    "    return arr[n-k:] + arr[:n-k]\n",
+    "\n",
+    "arr=[1,2,3,4,2]\n",
+    "print(rotate_right(arr,2))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4ea8248-c3c1-4b9f-8b38-1ffe2c50039d",
+   "id": "c8b58b46-b208-4552-93d0-f42b5c1f6096",
    "metadata": {},
    "outputs": [],
    "source": []
